fix button mobile

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -44,7 +44,8 @@
 
 @include abs.breakpoint(mobile) {
   #play-toggle {
-    right: 2.5rem;
+    right: 0.5rem;
+    top: 0.5rem;
     font-size: 0.8rem;
     padding: 0.3rem 0.7rem;
   }
